--- a/SGE/pom.xml
+++ b/SGE/pom.xml
@@ -19,6 +19,13 @@
 	
 	<dependencies>
 		
+	 	<!-- Para utilizar java.time de Java 8 con Hibernate -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+			<version>5.1.0.Final</version>
+		</dependency> 
+		
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<dependency>
 		    <groupId>org.hibernate</groupId>
@@ -90,7 +97,6 @@
 			<scope>provided</scope>
 		</dependency>
 
-		
 		<!-- driver jdbc -->
 		<dependency>
 			<groupId>mysql</groupId>
