--- a/SGE/pom.xml
+++ b/SGE/pom.xml
@@ -171,6 +171,44 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<!-- PARA HEROKU -->
+			<plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <executions>
+                <execution>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+	            <configuration>
+	                <descriptorRefs>
+	                    <!-- This tells Maven to include all dependencies -->
+	                    <descriptorRef>jar-with-dependencies</descriptorRef>
+	                </descriptorRefs>
+	                <archive>
+	                    <manifest>
+	                        <mainClass>Main</mainClass>
+	                    </manifest>
+	                </archive>
+	            </configuration>
+	        </plugin>
+	        <plugin>
+			    <groupId>com.heroku.sdk</groupId>
+			    <artifactId>heroku-maven-plugin</artifactId>
+			    <version>0.4.4</version>
+			    <configuration>
+			        <jdkVersion>1.8</jdkVersion>
+			        <!-- Use your own application name -->
+			        <appName>spark-heroku-sge</appName> 
+			        <processTypes>
+			            <!-- Tell Heroku how to launch your application -->
+			            <!-- You might have to remove the ./ in front   -->
+			            <web>java -jar ./target/SGE-0.0.1-SNAPSHOT-jar-with-dependencies.jar</web>
+			        </processTypes>
+			    </configuration>
+			</plugin>
 		</plugins>
 	</build>
 
