--- a/SGE/pom.xml
+++ b/SGE/pom.xml
@@ -189,7 +189,7 @@
 	                </descriptorRefs>
 	                <archive>
 	                    <manifest>
-	                        <mainClass>Main</mainClass>
+	                        <mainClass>Application</mainClass>
 	                    </manifest>
 	                </archive>
 	            </configuration>
@@ -201,7 +201,7 @@
 			    <configuration>
 			        <jdkVersion>1.8</jdkVersion>
 			        <!-- Use your own application name -->
-			        <appName>spark-heroku-sge</appName> 
+			        <appName>SGE</appName> 
 			        <processTypes>
 			            <!-- Tell Heroku how to launch your application -->
 			            <!-- You might have to remove the ./ in front   -->
