--- a/SGE/pom.xml
+++ b/SGE/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.utn.frba.dds.g17</groupId>
-	<artifactId>SGE</artifactId>
+	<artifactId>sge18</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>SGE</name>
+	<name>sge2018</name>
 	<url>http://maven.apache.org</url>
 
 	<properties>
@@ -150,7 +150,26 @@
 			<artifactId>hsqldb</artifactId>
 			<version>2.2.8</version>
 		</dependency>
-   	 	
+		
+		<!-- Integracion MQTT -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+		   	 	
 	</dependencies>
 	
 	<repositories>
@@ -201,11 +220,11 @@
 			    <configuration>
 			        <jdkVersion>1.8</jdkVersion>
 			        <!-- Use your own application name -->
-			        <appName>SGE</appName> 
+			        <appName>sge2018</appName> 
 			        <processTypes>
 			            <!-- Tell Heroku how to launch your application -->
 			            <!-- You might have to remove the ./ in front   -->
-			            <web>java -jar ./target/SGE-0.0.1-SNAPSHOT-jar-with-dependencies.jar</web>
+			            <web>java -jar ./target/sge2018-0.0.1-SNAPSHOT-jar-with-dependencies.jar</web>
 			        </processTypes>
 			    </configuration>
 			</plugin>
